[package]
name = "nft-staking"
version = "0.1.0"
description = "Solana NFT Minting and Staking Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking"

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", default-features = false, features = ["token", "associated_token"] }
solana-program = "1.18.26"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []